fix: scrolling horizontally not possible on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 .table-container, title {
     text-align: center;
     white-space: nowrap;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 .title {
@@ -123,7 +123,6 @@ body {
     .table-container {
         text-align: center;
         white-space: nowrap;
-        overflow-x: auto; /* Enable horizontal scrolling on smaller screens */
     }
 }
 
